BabylonJS Hello World

--- a/app/views/landing_pages/home.html.slim
+++ b/app/views/landing_pages/home.html.slim
@@ -1,2 +1,2 @@
-h1 LandingPages#home
-p Find me in app/views/landing_pages/home.html.slim
+canvas id='renderCanvas'
+= javascript_pack_tag 'babylon_hello_world'
