--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+html, body
+  overflow: hidden
+  width: 100%
+  height: 100%
+  margin: 0
+  padding: 0
+
+#renderCanvas
+  width: 100%
+  height: 100%
+  touch-action: none
